@@ -1987,13 +1987,13 @@
   (flet ((onedir (pathname)
            (let ((pathname-list (directory pathname :full t :circle t)))
              (if (every #'atom pathname-list)
-                 (format t "~{~%~A~}"
-                         (sort pathname-list #'string< :key #'namestring))
-                 (let ((date-format (date-format)))
-                   (dolist (l (sort pathname-list #'string< :key
-                                    #'(lambda (l) (namestring (first l)))))
-                     (format t "~%~A~40T~7D~52T~21<~@?~>"
-                             (first l) (fourth l) date-format (third l))))))))
+               (format t "~{~&~A~.~}"
+                       (sort pathname-list #'string< :key #'namestring))
+               (let ((date-format (date-format)))
+                 (dolist (l (sort pathname-list #'string<
+                                  :key #'(lambda (l) (namestring (first l)))))
+                   (format t "~&~A~40T~7D~52T~21<~@?~>~."
+                           (first l) (fourth l) date-format (third l))))))))
     (if (listp pathnames) (mapc #'onedir pathnames) (onedir pathnames)))
   (values))
 
